<resources>
    <string name="app_name">Pockie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notifications">Notifications</string>
    <string name="mark_all_as_read">Mark all as read</string>
    <string name="setting">Settings</string>
    <string name="treasure_the_beautiful_moments_shared_with_those_you_love">Treasure the beautiful moments shared with those you love</string>
    <string name="create_an_account">Create an account</string>
    <string name="sign_in">Sign In</string>
    <string name="Continue">Continue</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password">Password</string>
    <string name="you_forgot_password">You forgot password?</string>
    <string name="required_password">Password must be at least <b><font color="#EB4E4E">8 characters</font></b> including <b><font color="#EB4E4E">uppercase</font></b>, <b><font color="#EB4E4E">lowercase</font></b>, and <b><font color="#EB4E4E">numbers</font></b></string>
    <string name="what_s_your_name">What\'s your name?</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="verify_your_phone_number">Verify your phone number</string>
    <string name="otp_resend">Didn\'t receive the OTP? <b><font color="#FEA6B6">Resend OTP</font></b></string>
    <string name="import_your_contacts">Import your contacts</string>
    <string name="add_contact">Add your <font color="#FEA6B6">best friend</font></string>
    <string name="pick_best_friend">Pick best friend</string>
    <string name="add">Add</string>
    <string name="your_pockie_is_set_up">Your Pockie is set up</string>
    <string name="send_connection_invitation_to_best_friends">Send connection invitation to best friends</string>
    <string name="we_ll_notify_you_once_your_friends_have_set_up_theirs">We\'ll notify you once your friends have set up theirs</string>
    <string name="finish">Finish</string>
    <string name="add_to_friend">+ Add to friend</string>
    <string name="chat">Chat</string>
    <string name="show_more">Show more</string>
    <string name="show_less">Show less</string>
    <string name="history">History</string>
    <string name="add_a_caption">Add a caption</string>
    <string name="send_a_message">Send a message</string>
    <string name="download">Download</string>
    <string name="cancel">Cancel</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="bio">Bio</string>
    <string name="save">Save</string>
    <string name="type_a_message">Type a message...</string>
    <string name="abc_example_com">abc@example.com</string>
    <string name="what_s_your_email">What\'s your email?</string>
    <string name="no_post_recently">No post recently</string>
    <string name="default_notification_channel_id">DEFAULT_NOTIFICATION_CHANNEL_ID</string>
    <string name="you_don_t_have_anyone_in_your_friend_list_yet">You don\'t have anyone in your friend list yet.</string>
    <string name="select_a_tag">Select a tag</string>
    <string name="select_post_by_tag">Select post by tag:</string>
    <string name="delete">Delete</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account">Delete account</string>
    <string name="about_pockie">About POCKIE</string>
    <string name="dangerous_zone">Dangerous zone</string>
    <string name="introduction">Introduction</string>
</resources>