<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream_white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.mainapp.setting.SettingsFragment">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cream_white"
        android:navigationIcon="@drawable/back_arrow"
        app:layout_constraintTop_toTopOf="parent"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium"/>
    </Toolbar>

    <TextView
        android:id="@+id/tvDanger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/dangerous_zone"
        android:textColor="@color/gray_text"
        android:textSize="16sp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        />

    <LinearLayout
        android:id="@+id/layoutDeleteAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvDanger"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/trash_bin"
            android:layout_gravity="center"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_account"
            android:textColor="@color/red"
            android:fontFamily="@font/poppins"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutSignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layoutDeleteAccount"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/waving_hand"
            android:layout_gravity="center"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_marginStart="10dp"/>

    </LinearLayout>


    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_pockie"
        android:textColor="@color/gray_text"
        android:fontFamily="@font/poppins_medium"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/layoutSignOut"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:id="@+id/layoutInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvInfo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/info"
            android:layout_gravity="center"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/introduction"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_marginStart="10dp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>