<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.authentication.password.PasswordFragment">

    <View
        android:id="@+id/back"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintDimensionRatio="1:1"
        android:background="@drawable/ic_back"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        android:scaleType="fitCenter" />

    <TextView
        android:id="@+id/text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHeight_percent="0.1"
        android:textColor="@color/white"
        app:layout_constraintVertical_bias="0.1"
        android:text="@string/enter_your_password"
        android:fontFamily="@font/poppins_semibold"
        android:autoSizeMinTextSize="10dp"
        android:autoSizeMaxTextSize="25dp"
        android:autoSizeTextType="uniform"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwd_layout"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/gray_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwd"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="10dp"
            android:maxLines="1"
            android:drawablePadding="10dp"
            android:inputType="textPassword"
            android:textSize="15dp"
            android:background="@drawable/background_field"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:textColorHint="@color/gray_text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/note"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/passwd_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintVertical_bias="0"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintHorizontal_bias="1"
        android:autoSizeMinTextSize="5sp"
        android:autoSizeMaxTextSize="15sp"
        android:autoSizeTextType="uniform"
        android:text="@string/required_password"
        android:textColor="@color/white"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/forgot_passwd"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/background_field"
        android:text="@string/you_forgot_password"
        app:layout_constraintTop_toBottomOf="@id/passwd_layout"
        android:textColor="@color/white"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/next"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/note"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintWidth_percent="0.7"
        android:text="@string/Continue"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins_semibold"
        android:background="@drawable/white_button"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>