<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".presentation.ui.authentication.setup.SetUpFragment">

    <TextView
        android:id="@+id/text1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/your_pockie_is_set_up"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        android:textColor="@color/white"
        app:layout_constraintHeight_percent="0.1"
        android:fontFamily="@font/poppins_bold"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeMaxTextSize="25sp"
        android:autoSizeTextType="uniform"
        android:gravity="center|bottom"
        app:layout_constraintVertical_bias="0"/>

    <TextView
        android:id="@+id/text2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/text1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        android:textColor="@color/gray_text"
        android:text="@string/we_ll_notify_you_once_your_friends_have_set_up_theirs"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintVertical_bias="0"
        android:autoSizeMinTextSize="5sp"
        android:autoSizeMaxTextSize="15sp"
        android:autoSizeTextType="uniform"
        android:gravity="center|top"
        android:fontFamily="@font/poppins_medium"/>

    <Button
        android:id="@+id/finish"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/text2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintVertical_bias="0.94"
        android:text="@string/finish"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_semibold"
        android:textAllCaps="false"
        android:background="@drawable/white_button"
        app:layout_constraintWidth_percent="0.7"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>