<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream_white"
    tools:context=".presentation.ui.authentication.onboarding.OnboardingFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/app_name"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/pockie"
            />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/app_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="40dp"
        android:autoSizeMinTextSize="10dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/text_pink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/caption"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintVertical_bias="0"
        android:text="@string/treasure_the_beautiful_moments_shared_with_those_you_love"
        android:textColor="@color/gray_text"
        android:autoSizeMaxTextSize="20dp"
        android:autoSizeMinTextSize="10dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center|top"/>

    <Button
        android:id="@+id/sign_up"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/caption"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        android:background="@drawable/white_button"
        app:layout_constraintHeight_percent="0.065"
        android:text="@string/create_an_account"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/gray_text"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintVertical_bias="0"/>
    
    <Button
        android:id="@+id/sign_in"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        android:background="@drawable/black_button"
        app:layout_constraintHeight_percent="0.065"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintVertical_bias="0.3"
        android:textAllCaps="false"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_semibold"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"/>

</androidx.constraintlayout.widget.ConstraintLayout>