<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:background="@color/black">

    <View
        android:id="@+id/img"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_contact"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintVertical_bias="0.1"/>

    <TextView
        android:id="@+id/text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textColor="@color/white"
        android:text="@string/import_your_contacts"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.2"
        android:fontFamily="@font/poppins_semibold"
        android:autoSizeMinTextSize="10dp"
        android:autoSizeMaxTextSize="20sp"
        android:autoSizeTextType="uniform"
        android:gravity="center|bottom"
        app:layout_constraintVertical_bias="0"/>

    <TextView
        android:id="@+id/text2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHeight_percent="0.1"
        android:autoSizeMinTextSize="5sp"
        android:autoSizeMaxTextSize="13sp"
        android:autoSizeTextType="uniform"
        android:text="@string/send_connection_invitation_to_best_friends"
        android:textColor="@color/gray_text"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        app:layout_constraintVertical_bias="0"/>

    <Button
        android:id="@+id/next"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/text2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        android:background="@drawable/white_button"
        app:layout_constraintHeight_percent="0.17"
        app:layout_constraintWidth_percent="0.4"
        android:text="@string/Continue"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins_semibold"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />


</androidx.constraintlayout.widget.ConstraintLayout>