<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".presentation.ui.mainapp.profile.edit_profile.EditProfileFragment">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:navigationIcon="@drawable/back_arrow"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_medium"
            android:textSize="18sp"
            android:text="@string/edit_profile"/>
    </Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivAvatar"
                android:layout_width="240dp"
                android:layout_height="240dp"
                android:scaleType="centerCrop"
                android:background="@color/white"
                app:shapeAppearanceOverlay="@style/RoundedImageView"
                android:src="@drawable/uzui"
                android:layout_marginVertical="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnChangeAvatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:backgroundTint="@color/gray_bg"
                app:borderWidth="0dp"
                app:fabSize="mini"
                android:src="@drawable/camera"
                app:layout_constraintBottom_toBottomOf="@id/ivAvatar"
                app:layout_constraintEnd_toEndOf="@id/ivAvatar"/>

            <TextView
                android:id="@+id/tvFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/full_name"
                android:textColor="@color/gray_text"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="50dp"
                app:layout_constraintTop_toBottomOf="@id/ivAvatar"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/etFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:background="@drawable/background_field"
                android:textColor="@color/white"
                android:textColorHint="@color/gray_text"
                android:padding="12dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/tvFullName"/>


            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/username"
                android:textColor="@color/gray_text"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginHorizontal="24dp"
                app:layout_constraintTop_toBottomOf="@id/etFullName"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:background="@drawable/background_field"
                android:textColor="@color/white"
                android:textColorHint="@color/gray_text"
                android:padding="12dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/tvUsername"/>

            <TextView
                android:id="@+id/tvBio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/bio"
                android:textColor="@color/gray_text"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginHorizontal="24dp"
                app:layout_constraintTop_toBottomOf="@id/etUsername"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/etBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:background="@drawable/background_field"
                android:textColor="@color/white"
                android:textColorHint="@color/gray_text"
                android:padding="12dp"
                android:lines="3"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/tvBio"/>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/save"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_medium"
                android:background="@drawable/white_button"
                app:layout_constraintVertical_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etBio"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</LinearLayout>